After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705435 - remote-display-manager: Avoid unref'ing NULL in case of errors
remote-display-manager: Avoid unref'ing NULL in case of errors
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-08-04 09:13 UTC by Emanuele Aina
Modified: 2013-08-07 16:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
remote-display-manager: Avoid unref'ing NULL in case of errors (1.59 KB, patch)
2013-08-04 09:13 UTC, Emanuele Aina
committed Details | Review
remote-display-manager: Avoid unref'ing NULL in case of errors, again (1.53 KB, patch)
2013-08-07 11:50 UTC, Emanuele Aina
committed Details | Review

Description Emanuele Aina 2013-08-04 09:13:41 UTC
In case of error photos_dlna_renderer_share_finish() returns NULL, so
it's better to call _unref() only after checking the error status.
Comment 1 Emanuele Aina 2013-08-04 09:13:43 UTC
Created attachment 250789 [details] [review]
remote-display-manager: Avoid unref'ing NULL in case of errors

In case of error photos_dlna_renderer_share_finish() returns NULL, so
it's better to call _unref() only after checking the error status.
Comment 2 Debarshi Ray 2013-08-04 09:24:48 UTC
Comment on attachment 250789 [details] [review]
remote-display-manager: Avoid unref'ing NULL in case of errors

Thanks a lot for the patch!
Comment 3 Emanuele Aina 2013-08-07 11:49:22 UTC
Oops, in commit 37dfb5cc I inadvertently reverted the patch, reopening the bug.
Comment 4 Emanuele Aina 2013-08-07 11:50:02 UTC
Created attachment 251059 [details] [review]
remote-display-manager: Avoid unref'ing NULL in case of errors, again

Ouch. Commit 37dfb5cc inadvertently reverted 3f01ccd, reapply.