remote-display-manager: Avoid unref'ing NULL in case of errors, again

Ouch. Commit 37dfb5cc inadvertently reverted 3f01ccd, reapply.

https://bugzilla.gnome.org/show_bug.cgi?id=705435